@@ -1,4 +1,4 @@
-.TH SG3_UTILS "8" "December 2013" "sg3_utils\-1.38" SG3_UTILS
+.TH SG3_UTILS "8" "January 2014" "sg3_utils\-1.38" SG3_UTILS
 .SH NAME
 sg3_utils \- a package of utilities for sending SCSI commands
 .SH SYNOPSIS
@@ -418,7 +418,7 @@ CREDITS file and individual source files (in the 'src' directory).
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 1999\-2013 Douglas Gilbert
+Copyright \(co 1999\-2014 Douglas Gilbert
 .br
 Some utilities are distributed under a GPL version 2 license while
 others, usually more recent ones, are under a FreeBSD license. The files
